--- a/alumnos/templates/base.html
+++ b/alumnos/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +7,8 @@
     <title>{% block title %}
         Hola Mundo Django Template
     {% endblock title %}</title>
-    <link rel="stylesheet" href="css/foundation.min.css">
+    <link rel="stylesheet" href={% static "css/foundation.min.css" %}>
+    
 </head>
 <body>
 <div class="top-bar">
@@ -36,8 +38,8 @@
     
 {% endblock contenido %}
 
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/foundation.min.js"></script>
+    <script src={% static "js/vendor/jquery.js" %}></script>
+    <script src={% static "js/vendor/foundation.min.js" %}></script>
     <script>
         $(document).foundation();
     </script>
