--- a/alumnos/templates/formulario.html
+++ b/alumnos/templates/formulario.html
@@ -3,5 +3,11 @@
     Formulario App
 {% endblock title %}
 {% block contenido %}
-    <h3>Hola {{formulario}}</h3>
+
+<form action="" method="post">
+    {% csrf_token %}
+    {{formulario}}
+    <button type="submit" class="button primary">Registrar</button>
+</form>
+   
 {% endblock contenido %}
